2001-03-05  Eric Fischer  <eric@eazel.com>

	reviewed by: Robin * Slomkowski <rslomkow@eazel.com>

	* configure.in:
	Explicitly run gtk-config to get GTK's cflags, because
	$GNOMEUI_CFLAGS aren't enough for people who've upgraded
	to GTK 1.2.9.  (Bug 7315)

2001-03-05  Rebecca Schulman  <rebecka@eazel.com>
	Complete work for 5520, that cron should be running
	for medusa to work.

	reviewed by: <delete if not using a buddy>

	* libnautilus-extensions/nautilus-global-preferences.c:
	(global_preferences_use_fast_search_changed_callback):
	Change the text to Vera's final copy.
	* src/nautilus-first-time-druid.c: (druid_finished),
	(back_update_page_callback), (set_up_medusa_page),
	(next_medusa_page_callback), (set_up_cron_information_page),
	(nautilus_first_time_druid_show):
	Change the text to Vera's final copies, make medusa update
	correctly when medusa is turned on in the first time druid

2001-03-05  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: John Harper  <jsh@eazel.com>

	Fix bug 7391 (The logon dialog box for services has input boxes
	larger that the dialog can contain)

	* components/services/summary/nautilus-summary-dialogs.c
	(nautilus_summary_show_login_dialog): Remove the line that was
	setting a hardcoded width.

2001-03-05  Eric Fischer  <eric@eazel.com>

	reviewed by: Don Melton <don@eazel.com>

	* nautilus.spec.in:
	Add share/pixmaps/nautilus/crux_eggplant/throbber/*.png
	to the list of files to be put in the RPM (Bug 7383).

>>>>>>> 1.4166
2001-03-05  John Harper  <jsh@eazel.com>

	Fixed bug 7402 (Fonts that don't define ` ' cause assertions
	and squash words together):

	* librsvg/rsvg-ft.c (rsvg_ft_measure_or_render_string): force
	the width of the returned glyph to be at least one pixel

	* librsvg/rsvg-ft.c (rsvg_ft_get_glyph_cached): added extra
	arg `cache_ix'. Used when accessing the glyph cache. The old
	`glyph_ix' arg is only used when accessing the physical font
	(this allows a cached glyph to be created from a different